# breadboard-os

hardware/stm32g4/: CMakeLists.txt  hardware_config.h  prebuild.cmake
hardware/stm32g4/platform/: CMakeLists.txt
hardware/stm32g4/platform/g474_nucleo/: CMakeLists.txt
hardware/stm32g4/platform/g474_nucleo/Inc/: core.h  gpio.h
hardware/stm32g4/platform/g474_nucleo/Src/: core.c  gpio.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
hardware/stm32g4/platform/stm32g4_hal/: CMakeLists.txt
